--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,40 +1,40 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="87d091">  <td>17/12/10 19:41:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LoginTest()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@8567b79]">LoginTest</td> 
-  <td>main@44808654</td>   <td></td> </tr>
-<tr bgcolor="86caf8">  <td>17/12/10 19:40:41</td>   <td>-37887</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.clickOnContactsLinkTest()[pri:2, instance:com.crm.qa.testcases.HomePageTest@5f4c39d]">clickOnContactsLinkTest</td> 
-  <td>main@44808654</td>   <td></td> </tr>
-<tr bgcolor="86caf8">  <td>17/12/10 19:41:04</td>   <td>-14167</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.clickOnDealsPageLink()[pri:3, instance:com.crm.qa.testcases.HomePageTest@5f4c39d]">clickOnDealsPageLink</td> 
-  <td>main@44808654</td>   <td></td> </tr>
-<tr bgcolor="86caf8">  <td>17/12/10 19:39:59</td>   <td>-79164</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.crm.qa.testcases.HomePageTest@5f4c39d]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@44808654</td>   <td></td> </tr>
-<tr bgcolor="86caf8">  <td>17/12/10 19:40:21</td>   <td>-57866</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.crm.qa.testcases.HomePageTest@5f4c39d]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@44808654</td>   <td></td> </tr>
-<tr bgcolor="86caf8">  <td>17/12/10 19:40:45</td>   <td>-33886</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.crm.qa.testcases.HomePageTest@5f4c39d]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@44808654</td>   <td></td> </tr>
-<tr bgcolor="87d091">  <td>17/12/10 19:41:08</td>   <td>-10492</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@8567b79]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@44808654</td>   <td></td> </tr>
-<tr bgcolor="87d091">  <td>17/12/10 19:41:28</td>   <td>9656</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@8567b79]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@44808654</td>   <td></td> </tr>
-<tr bgcolor="87d091">  <td>17/12/10 19:41:40</td>   <td>21655</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@8567b79]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@44808654</td>   <td></td> </tr>
-<tr bgcolor="86caf8">  <td>17/12/10 19:40:20</td>   <td>-58832</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.HomePageTest@5f4c39d]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@44808654</td>   <td></td> </tr>
-<tr bgcolor="86caf8">  <td>17/12/10 19:40:44</td>   <td>-34865</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.HomePageTest@5f4c39d]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@44808654</td>   <td></td> </tr>
-<tr bgcolor="86caf8">  <td>17/12/10 19:41:07</td>   <td>-11441</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.HomePageTest@5f4c39d]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@44808654</td>   <td></td> </tr>
-<tr bgcolor="87d091">  <td>17/12/10 19:41:28</td>   <td>8892</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@8567b79]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@44808654</td>   <td></td> </tr>
-<tr bgcolor="87d091">  <td>17/12/10 19:41:40</td>   <td>20898</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@8567b79]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@44808654</td>   <td></td> </tr>
-<tr bgcolor="87d091">  <td>17/12/10 19:41:51</td>   <td>32599</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@8567b79]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@44808654</td>   <td></td> </tr>
-<tr bgcolor="87d091">  <td>17/12/10 19:41:39</td>   <td>20798</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLoginPageTitleTest()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@8567b79]">verifyLoginPageTitleTest</td> 
-  <td>main@44808654</td>   <td></td> </tr>
-<tr bgcolor="87d091">  <td>17/12/10 19:41:51</td>   <td>32507</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLogoTest()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@8567b79]">verifyLogoTest</td> 
-  <td>main@44808654</td>   <td></td> </tr>
-<tr bgcolor="86caf8">  <td>17/12/10 19:40:20</td>   <td>-59085</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyNameTest()[pri:1, instance:com.crm.qa.testcases.HomePageTest@5f4c39d]">verifyNameTest</td> 
-  <td>main@44808654</td>   <td></td> </tr>
+<tr bgcolor="62b5a9">  <td>17/12/17 19:33:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LoginTest()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@560fc912]">LoginTest</td> 
+  <td>main@950896663</td>   <td></td> </tr>
+<tr bgcolor="ee7793">  <td>17/12/17 19:32:32</td>   <td>-37336</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.clickOnContactsLinkTest()[pri:2, instance:com.crm.qa.testcases.HomePageTest@39a26ac5]">clickOnContactsLinkTest</td> 
+  <td>main@950896663</td>   <td></td> </tr>
+<tr bgcolor="ee7793">  <td>17/12/17 19:32:56</td>   <td>-13508</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.clickOnDealsPageLink()[pri:3, instance:com.crm.qa.testcases.HomePageTest@39a26ac5]">clickOnDealsPageLink</td> 
+  <td>main@950896663</td>   <td></td> </tr>
+<tr bgcolor="ee7793">  <td>17/12/17 19:31:42</td>   <td>-86881</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.crm.qa.testcases.HomePageTest@39a26ac5]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@950896663</td>   <td></td> </tr>
+<tr bgcolor="ee7793">  <td>17/12/17 19:32:10</td>   <td>-58752</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.crm.qa.testcases.HomePageTest@39a26ac5]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@950896663</td>   <td></td> </tr>
+<tr bgcolor="ee7793">  <td>17/12/17 19:32:34</td>   <td>-34944</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.crm.qa.testcases.HomePageTest@39a26ac5]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@950896663</td>   <td></td> </tr>
+<tr bgcolor="62b5a9">  <td>17/12/17 19:32:58</td>   <td>-10988</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@560fc912]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@950896663</td>   <td></td> </tr>
+<tr bgcolor="62b5a9">  <td>17/12/17 19:33:21</td>   <td>11709</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@560fc912]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@950896663</td>   <td></td> </tr>
+<tr bgcolor="62b5a9">  <td>17/12/17 19:33:33</td>   <td>23366</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@560fc912]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@950896663</td>   <td></td> </tr>
+<tr bgcolor="ee7793">  <td>17/12/17 19:32:09</td>   <td>-60348</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.HomePageTest@39a26ac5]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@950896663</td>   <td></td> </tr>
+<tr bgcolor="ee7793">  <td>17/12/17 19:32:34</td>   <td>-35672</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.HomePageTest@39a26ac5]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@950896663</td>   <td></td> </tr>
+<tr bgcolor="ee7793">  <td>17/12/17 19:32:58</td>   <td>-11741</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.HomePageTest@39a26ac5]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@950896663</td>   <td></td> </tr>
+<tr bgcolor="62b5a9">  <td>17/12/17 19:33:20</td>   <td>10948</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@560fc912]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@950896663</td>   <td></td> </tr>
+<tr bgcolor="62b5a9">  <td>17/12/17 19:33:32</td>   <td>22617</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@560fc912]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@950896663</td>   <td></td> </tr>
+<tr bgcolor="62b5a9">  <td>17/12/17 19:33:44</td>   <td>34661</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@560fc912]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@950896663</td>   <td></td> </tr>
+<tr bgcolor="62b5a9">  <td>17/12/17 19:33:32</td>   <td>22592</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLoginPageTitleTest()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@560fc912]">verifyLoginPageTitleTest</td> 
+  <td>main@950896663</td>   <td></td> </tr>
+<tr bgcolor="62b5a9">  <td>17/12/17 19:33:44</td>   <td>34350</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLogoTest()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@560fc912]">verifyLogoTest</td> 
+  <td>main@950896663</td>   <td></td> </tr>
+<tr bgcolor="ee7793">  <td>17/12/17 19:32:08</td>   <td>-60872</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyNameTest()[pri:1, instance:com.crm.qa.testcases.HomePageTest@39a26ac5]">verifyNameTest</td> 
+  <td>main@950896663</td>   <td></td> </tr>
 </table>
