added screenshot utility using the WebWebDriverEventListener

--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,22 +1,22 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d5b1dc">  <td>17/12/23 12:07:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setup()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@744578e0]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@828010169</td>   <td></td> </tr>
-<tr bgcolor="d5b1dc">  <td>17/12/23 12:08:44</td>   <td>52565</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setup()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@744578e0]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@828010169</td>   <td></td> </tr>
-<tr bgcolor="d5b1dc">  <td>17/12/23 12:09:17</td>   <td>85207</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setup()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@744578e0]">&gt;&gt;setup</td> 
-<td>&nbsp;</td>  <td>main@828010169</td>   <td></td> </tr>
-<tr bgcolor="d5b1dc">  <td>17/12/23 12:08:42</td>   <td>50311</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@744578e0]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@828010169</td>   <td></td> </tr>
-<tr bgcolor="d5b1dc">  <td>17/12/23 12:09:16</td>   <td>84435</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@744578e0]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@828010169</td>   <td></td> </tr>
-<tr bgcolor="d5b1dc">  <td>17/12/23 12:09:46</td>   <td>114271</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@744578e0]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@828010169</td>   <td></td> </tr>
-<tr bgcolor="d5b1dc">  <td>17/12/23 12:08:32</td>   <td>40024</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.validateCreateNewContact(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@744578e0]">validateCreateNewContact</td> 
-  <td>main@828010169</td>   <td></td> </tr>
-<tr bgcolor="d5b1dc">  <td>17/12/23 12:09:07</td>   <td>75065</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.validateCreateNewContact(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@744578e0]">validateCreateNewContact</td> 
-  <td>main@828010169</td>   <td></td> </tr>
-<tr bgcolor="d5b1dc">  <td>17/12/23 12:09:38</td>   <td>106391</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.validateCreateNewContact(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@744578e0]">validateCreateNewContact</td> 
-  <td>main@828010169</td>   <td></td> </tr>
+<tr bgcolor="d5b1dc">  <td>17/12/24 12:05:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.clickOnContactsLinkTest()[pri:2, instance:com.crm.qa.testcases.HomePageTest@4824aa59]">clickOnContactsLinkTest</td> 
+  <td>main@1264729918</td>   <td></td> </tr>
+<tr bgcolor="d5b1dc">  <td>17/12/24 12:05:26</td>   <td>26201</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.clickOnDealsPageLink()[pri:3, instance:com.crm.qa.testcases.HomePageTest@4824aa59]">clickOnDealsPageLink</td> 
+  <td>main@1264729918</td>   <td></td> </tr>
+<tr bgcolor="d5b1dc">  <td>17/12/24 12:04:03</td>   <td>-57541</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.crm.qa.testcases.HomePageTest@4824aa59]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1264729918</td>   <td></td> </tr>
+<tr bgcolor="d5b1dc">  <td>17/12/24 12:04:39</td>   <td>-21148</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.crm.qa.testcases.HomePageTest@4824aa59]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1264729918</td>   <td></td> </tr>
+<tr bgcolor="d5b1dc">  <td>17/12/24 12:05:03</td>   <td>2433</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.crm.qa.testcases.HomePageTest@4824aa59]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1264729918</td>   <td></td> </tr>
+<tr bgcolor="d5b1dc">  <td>17/12/24 12:04:38</td>   <td>-22194</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.HomePageTest@4824aa59]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1264729918</td>   <td></td> </tr>
+<tr bgcolor="d5b1dc">  <td>17/12/24 12:05:02</td>   <td>1500</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.HomePageTest@4824aa59]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1264729918</td>   <td></td> </tr>
+<tr bgcolor="d5b1dc">  <td>17/12/24 12:05:28</td>   <td>27715</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.HomePageTest@4824aa59]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1264729918</td>   <td></td> </tr>
+<tr bgcolor="d5b1dc">  <td>17/12/24 12:04:27</td>   <td>-32948</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyNameTest()[pri:1, instance:com.crm.qa.testcases.HomePageTest@4824aa59]">verifyNameTest</td> 
+  <td>main@1264729918</td>   <td></td> </tr>
 </table>
