--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,40 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="ee7793">  <td>17/12/17 19:31:42</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.crm.qa.testcases.HomePageTest@39a26ac5]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@950896663</td>   <td></td> </tr>
-<tr bgcolor="ee7793">  <td>17/12/17 19:32:08</td>   <td>26009</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyNameTest()[pri:1, instance:com.crm.qa.testcases.HomePageTest@39a26ac5]">verifyNameTest</td> 
-  <td>main@950896663</td>   <td></td> </tr>
-<tr bgcolor="ee7793">  <td>17/12/17 19:32:09</td>   <td>26533</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.HomePageTest@39a26ac5]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@950896663</td>   <td></td> </tr>
-<tr bgcolor="ee7793">  <td>17/12/17 19:32:10</td>   <td>28129</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.crm.qa.testcases.HomePageTest@39a26ac5]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@950896663</td>   <td></td> </tr>
-<tr bgcolor="ee7793">  <td>17/12/17 19:32:32</td>   <td>49545</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.clickOnContactsLinkTest()[pri:2, instance:com.crm.qa.testcases.HomePageTest@39a26ac5]">clickOnContactsLinkTest</td> 
-  <td>main@950896663</td>   <td></td> </tr>
-<tr bgcolor="ee7793">  <td>17/12/17 19:32:34</td>   <td>51209</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.HomePageTest@39a26ac5]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@950896663</td>   <td></td> </tr>
-<tr bgcolor="ee7793">  <td>17/12/17 19:32:34</td>   <td>51937</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.crm.qa.testcases.HomePageTest@39a26ac5]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@950896663</td>   <td></td> </tr>
-<tr bgcolor="ee7793">  <td>17/12/17 19:32:56</td>   <td>73373</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.clickOnDealsPageLink()[pri:3, instance:com.crm.qa.testcases.HomePageTest@39a26ac5]">clickOnDealsPageLink</td> 
-  <td>main@950896663</td>   <td></td> </tr>
-<tr bgcolor="ee7793">  <td>17/12/17 19:32:58</td>   <td>75140</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.HomePageTest@39a26ac5]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@950896663</td>   <td></td> </tr>
-<tr bgcolor="62b5a9">  <td>17/12/17 19:32:58</td>   <td>75893</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@560fc912]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@950896663</td>   <td></td> </tr>
-<tr bgcolor="62b5a9">  <td>17/12/17 19:33:09</td>   <td>86881</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LoginTest()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@560fc912]">LoginTest</td> 
-  <td>main@950896663</td>   <td></td> </tr>
-<tr bgcolor="62b5a9">  <td>17/12/17 19:33:20</td>   <td>97829</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@560fc912]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@950896663</td>   <td></td> </tr>
-<tr bgcolor="62b5a9">  <td>17/12/17 19:33:21</td>   <td>98590</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@560fc912]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@950896663</td>   <td></td> </tr>
-<tr bgcolor="62b5a9">  <td>17/12/17 19:33:32</td>   <td>109473</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLoginPageTitleTest()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@560fc912]">verifyLoginPageTitleTest</td> 
-  <td>main@950896663</td>   <td></td> </tr>
-<tr bgcolor="62b5a9">  <td>17/12/17 19:33:32</td>   <td>109498</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@560fc912]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@950896663</td>   <td></td> </tr>
-<tr bgcolor="62b5a9">  <td>17/12/17 19:33:33</td>   <td>110247</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@560fc912]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@950896663</td>   <td></td> </tr>
-<tr bgcolor="62b5a9">  <td>17/12/17 19:33:44</td>   <td>121231</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLogoTest()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@560fc912]">verifyLogoTest</td> 
-  <td>main@950896663</td>   <td></td> </tr>
-<tr bgcolor="62b5a9">  <td>17/12/17 19:33:44</td>   <td>121542</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@560fc912]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@950896663</td>   <td></td> </tr>
+<tr bgcolor="62a5a2">  <td>17/12/24 11:39:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.crm.qa.testcases.HomePageTest@794f2dae]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@174728500</td>   <td></td> </tr>
+<tr bgcolor="62a5a2">  <td>17/12/24 11:40:08</td>   <td>28686</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyNameTest()[pri:1, instance:com.crm.qa.testcases.HomePageTest@794f2dae]">verifyNameTest</td> 
+  <td>main@174728500</td>   <td></td> </tr>
+<tr bgcolor="62a5a2">  <td>17/12/24 11:40:18</td>   <td>39055</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.HomePageTest@794f2dae]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@174728500</td>   <td></td> </tr>
+<tr bgcolor="62a5a2">  <td>17/12/24 11:40:20</td>   <td>40558</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.crm.qa.testcases.HomePageTest@794f2dae]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@174728500</td>   <td></td> </tr>
+<tr bgcolor="62a5a2">  <td>17/12/24 11:40:32</td>   <td>52622</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.clickOnContactsLinkTest()[pri:2, instance:com.crm.qa.testcases.HomePageTest@794f2dae]">clickOnContactsLinkTest</td> 
+  <td>main@174728500</td>   <td></td> </tr>
+<tr bgcolor="62a5a2">  <td>17/12/24 11:40:32</td>   <td>52631</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.clickOnDealsPageLink()[pri:3, instance:com.crm.qa.testcases.HomePageTest@794f2dae]">clickOnDealsPageLink</td> 
+  <td>main@174728500</td>   <td></td> </tr>
+<tr bgcolor="a8d1e4">  <td>17/12/24 11:40:32</td>   <td>52641</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@3d4038ba]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@174728500</td>   <td></td> </tr>
+<tr bgcolor="a8d1e4">  <td>17/12/24 11:40:49</td>   <td>69911</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LoginTest()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@3d4038ba]">LoginTest</td> 
+  <td>main@174728500</td>   <td></td> </tr>
+<tr bgcolor="a8d1e4">  <td>17/12/24 11:41:01</td>   <td>81778</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@3d4038ba]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@174728500</td>   <td></td> </tr>
+<tr bgcolor="a8d1e4">  <td>17/12/24 11:41:02</td>   <td>82602</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@3d4038ba]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@174728500</td>   <td></td> </tr>
+<tr bgcolor="a8d1e4">  <td>17/12/24 11:41:13</td>   <td>93419</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLoginPageTitleTest()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@3d4038ba]">verifyLoginPageTitleTest</td> 
+  <td>main@174728500</td>   <td></td> </tr>
+<tr bgcolor="a8d1e4">  <td>17/12/24 11:41:13</td>   <td>93480</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@3d4038ba]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@174728500</td>   <td></td> </tr>
+<tr bgcolor="a8d1e4">  <td>17/12/24 11:41:14</td>   <td>94376</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@3d4038ba]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@174728500</td>   <td></td> </tr>
+<tr bgcolor="a8d1e4">  <td>17/12/24 11:41:25</td>   <td>105239</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLogoTest()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@3d4038ba]">verifyLogoTest</td> 
+  <td>main@174728500</td>   <td></td> </tr>
+<tr bgcolor="a8d1e4">  <td>17/12/24 11:41:25</td>   <td>105554</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@3d4038ba]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@174728500</td>   <td></td> </tr>
 </table>
