added test classes in the test suite

--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,34 +1,48 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="62a5a2">  <td>17/12/24 11:39:39</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.crm.qa.testcases.HomePageTest@794f2dae]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@174728500</td>   <td></td> </tr>
-<tr bgcolor="62a5a2">  <td>17/12/24 11:40:08</td>   <td>28686</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyNameTest()[pri:1, instance:com.crm.qa.testcases.HomePageTest@794f2dae]">verifyNameTest</td> 
-  <td>main@174728500</td>   <td></td> </tr>
-<tr bgcolor="62a5a2">  <td>17/12/24 11:40:18</td>   <td>39055</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.HomePageTest@794f2dae]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@174728500</td>   <td></td> </tr>
-<tr bgcolor="62a5a2">  <td>17/12/24 11:40:20</td>   <td>40558</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.crm.qa.testcases.HomePageTest@794f2dae]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@174728500</td>   <td></td> </tr>
-<tr bgcolor="62a5a2">  <td>17/12/24 11:40:32</td>   <td>52622</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.clickOnContactsLinkTest()[pri:2, instance:com.crm.qa.testcases.HomePageTest@794f2dae]">clickOnContactsLinkTest</td> 
-  <td>main@174728500</td>   <td></td> </tr>
-<tr bgcolor="62a5a2">  <td>17/12/24 11:40:32</td>   <td>52631</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.clickOnDealsPageLink()[pri:3, instance:com.crm.qa.testcases.HomePageTest@794f2dae]">clickOnDealsPageLink</td> 
-  <td>main@174728500</td>   <td></td> </tr>
-<tr bgcolor="a8d1e4">  <td>17/12/24 11:40:32</td>   <td>52641</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@3d4038ba]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@174728500</td>   <td></td> </tr>
-<tr bgcolor="a8d1e4">  <td>17/12/24 11:40:49</td>   <td>69911</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LoginTest()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@3d4038ba]">LoginTest</td> 
-  <td>main@174728500</td>   <td></td> </tr>
-<tr bgcolor="a8d1e4">  <td>17/12/24 11:41:01</td>   <td>81778</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@3d4038ba]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@174728500</td>   <td></td> </tr>
-<tr bgcolor="a8d1e4">  <td>17/12/24 11:41:02</td>   <td>82602</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@3d4038ba]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@174728500</td>   <td></td> </tr>
-<tr bgcolor="a8d1e4">  <td>17/12/24 11:41:13</td>   <td>93419</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLoginPageTitleTest()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@3d4038ba]">verifyLoginPageTitleTest</td> 
-  <td>main@174728500</td>   <td></td> </tr>
-<tr bgcolor="a8d1e4">  <td>17/12/24 11:41:13</td>   <td>93480</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@3d4038ba]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@174728500</td>   <td></td> </tr>
-<tr bgcolor="a8d1e4">  <td>17/12/24 11:41:14</td>   <td>94376</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@3d4038ba]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@174728500</td>   <td></td> </tr>
-<tr bgcolor="a8d1e4">  <td>17/12/24 11:41:25</td>   <td>105239</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLogoTest()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@3d4038ba]">verifyLogoTest</td> 
-  <td>main@174728500</td>   <td></td> </tr>
-<tr bgcolor="a8d1e4">  <td>17/12/24 11:41:25</td>   <td>105554</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@3d4038ba]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@174728500</td>   <td></td> </tr>
+<tr bgcolor="ba90a1">  <td>17/12/24 12:16:18</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@316120fe]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="ba90a1">  <td>17/12/24 12:16:30</td>   <td>12326</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LoginTest()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@316120fe]">LoginTest</td> 
+  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="ba90a1">  <td>17/12/24 12:16:40</td>   <td>22906</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@316120fe]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="ba90a1">  <td>17/12/24 12:16:41</td>   <td>23757</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@316120fe]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="ba90a1">  <td>17/12/24 12:16:52</td>   <td>34637</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLoginPageTitleTest()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@316120fe]">verifyLoginPageTitleTest</td> 
+  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="ba90a1">  <td>17/12/24 12:16:52</td>   <td>34695</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@316120fe]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="ba90a1">  <td>17/12/24 12:16:53</td>   <td>35698</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@316120fe]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="ba90a1">  <td>17/12/24 12:17:04</td>   <td>46462</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLogoTest()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@316120fe]">verifyLogoTest</td> 
+  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="ba90a1">  <td>17/12/24 12:17:04</td>   <td>46550</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@316120fe]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="ac9684">  <td>17/12/24 12:17:05</td>   <td>47288</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.crm.qa.testcases.HomePageTest@5fbd1d05]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="ac9684">  <td>17/12/24 12:17:17</td>   <td>59684</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyNameTest()[pri:1, instance:com.crm.qa.testcases.HomePageTest@5fbd1d05]">verifyNameTest</td> 
+  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="ac9684">  <td>17/12/24 12:17:17</td>   <td>59695</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.clickOnContactsLinkTest()[pri:2, instance:com.crm.qa.testcases.HomePageTest@5fbd1d05]">clickOnContactsLinkTest</td> 
+  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="ac9684">  <td>17/12/24 12:17:17</td>   <td>59704</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.clickOnDealsPageLink()[pri:3, instance:com.crm.qa.testcases.HomePageTest@5fbd1d05]">clickOnDealsPageLink</td> 
+  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="767dd7">  <td>17/12/24 12:17:19</td>   <td>61834</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setup()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@78bc645d]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="767dd7">  <td>17/12/24 12:17:46</td>   <td>88447</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.validateCreateNewContact(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@78bc645d]">validateCreateNewContact</td> 
+  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="767dd7">  <td>17/12/24 12:17:56</td>   <td>98493</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@78bc645d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="767dd7">  <td>17/12/24 12:17:57</td>   <td>99327</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setup()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@78bc645d]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="767dd7">  <td>17/12/24 12:18:21</td>   <td>123536</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.validateCreateNewContact(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@78bc645d]">validateCreateNewContact</td> 
+  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="767dd7">  <td>17/12/24 12:18:29</td>   <td>131012</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@78bc645d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="767dd7">  <td>17/12/24 12:18:29</td>   <td>131831</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setup()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@78bc645d]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="767dd7">  <td>17/12/24 12:18:50</td>   <td>152561</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.validateCreateNewContact(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@78bc645d]">validateCreateNewContact</td> 
+  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="767dd7">  <td>17/12/24 12:18:59</td>   <td>161128</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@78bc645d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
 </table>
