--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,34 +1,48 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a8d1e4">  <td>17/12/24 11:40:49</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LoginTest()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@3d4038ba]">LoginTest</td> 
-  <td>main@174728500</td>   <td></td> </tr>
-<tr bgcolor="62a5a2">  <td>17/12/24 11:40:32</td>   <td>-17289</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.clickOnContactsLinkTest()[pri:2, instance:com.crm.qa.testcases.HomePageTest@794f2dae]">clickOnContactsLinkTest</td> 
-  <td>main@174728500</td>   <td></td> </tr>
-<tr bgcolor="62a5a2">  <td>17/12/24 11:40:32</td>   <td>-17280</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.clickOnDealsPageLink()[pri:3, instance:com.crm.qa.testcases.HomePageTest@794f2dae]">clickOnDealsPageLink</td> 
-  <td>main@174728500</td>   <td></td> </tr>
-<tr bgcolor="62a5a2">  <td>17/12/24 11:39:39</td>   <td>-69911</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.crm.qa.testcases.HomePageTest@794f2dae]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@174728500</td>   <td></td> </tr>
-<tr bgcolor="62a5a2">  <td>17/12/24 11:40:20</td>   <td>-29353</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.crm.qa.testcases.HomePageTest@794f2dae]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@174728500</td>   <td></td> </tr>
-<tr bgcolor="a8d1e4">  <td>17/12/24 11:40:32</td>   <td>-17270</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@3d4038ba]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@174728500</td>   <td></td> </tr>
-<tr bgcolor="a8d1e4">  <td>17/12/24 11:41:02</td>   <td>12691</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@3d4038ba]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@174728500</td>   <td></td> </tr>
-<tr bgcolor="a8d1e4">  <td>17/12/24 11:41:14</td>   <td>24465</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@3d4038ba]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@174728500</td>   <td></td> </tr>
-<tr bgcolor="62a5a2">  <td>17/12/24 11:40:18</td>   <td>-30856</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.HomePageTest@794f2dae]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@174728500</td>   <td></td> </tr>
-<tr bgcolor="a8d1e4">  <td>17/12/24 11:41:01</td>   <td>11867</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@3d4038ba]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@174728500</td>   <td></td> </tr>
-<tr bgcolor="a8d1e4">  <td>17/12/24 11:41:13</td>   <td>23569</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@3d4038ba]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@174728500</td>   <td></td> </tr>
-<tr bgcolor="a8d1e4">  <td>17/12/24 11:41:25</td>   <td>35643</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@3d4038ba]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td>  <td>main@174728500</td>   <td></td> </tr>
-<tr bgcolor="a8d1e4">  <td>17/12/24 11:41:13</td>   <td>23508</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLoginPageTitleTest()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@3d4038ba]">verifyLoginPageTitleTest</td> 
-  <td>main@174728500</td>   <td></td> </tr>
-<tr bgcolor="a8d1e4">  <td>17/12/24 11:41:25</td>   <td>35328</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLogoTest()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@3d4038ba]">verifyLogoTest</td> 
-  <td>main@174728500</td>   <td></td> </tr>
-<tr bgcolor="62a5a2">  <td>17/12/24 11:40:08</td>   <td>-41225</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyNameTest()[pri:1, instance:com.crm.qa.testcases.HomePageTest@794f2dae]">verifyNameTest</td> 
-  <td>main@174728500</td>   <td></td> </tr>
+<tr bgcolor="ba90a1">  <td>17/12/24 12:16:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.LoginTest()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@316120fe]">LoginTest</td> 
+  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="ac9684">  <td>17/12/24 12:17:17</td>   <td>47369</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.clickOnContactsLinkTest()[pri:2, instance:com.crm.qa.testcases.HomePageTest@5fbd1d05]">clickOnContactsLinkTest</td> 
+  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="ac9684">  <td>17/12/24 12:17:17</td>   <td>47378</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.clickOnDealsPageLink()[pri:3, instance:com.crm.qa.testcases.HomePageTest@5fbd1d05]">clickOnDealsPageLink</td> 
+  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="ba90a1">  <td>17/12/24 12:16:18</td>   <td>-12326</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@316120fe]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="ba90a1">  <td>17/12/24 12:16:41</td>   <td>11431</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@316120fe]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="ba90a1">  <td>17/12/24 12:16:53</td>   <td>23372</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.setUp()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@316120fe]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="ac9684">  <td>17/12/24 12:17:05</td>   <td>34962</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:com.crm.qa.testcases.HomePageTest@5fbd1d05]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="767dd7">  <td>17/12/24 12:17:19</td>   <td>49508</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setup()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@78bc645d]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="767dd7">  <td>17/12/24 12:17:57</td>   <td>87001</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setup()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@78bc645d]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="767dd7">  <td>17/12/24 12:18:29</td>   <td>119505</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;ContactsPageTest.setup()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@78bc645d]">&gt;&gt;setup</td> 
+<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="ba90a1">  <td>17/12/24 12:16:40</td>   <td>10580</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@316120fe]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="ba90a1">  <td>17/12/24 12:16:52</td>   <td>22369</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@316120fe]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="ba90a1">  <td>17/12/24 12:17:04</td>   <td>34224</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@316120fe]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="767dd7">  <td>17/12/24 12:17:56</td>   <td>86167</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@78bc645d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="767dd7">  <td>17/12/24 12:18:29</td>   <td>118686</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@78bc645d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="767dd7">  <td>17/12/24 12:18:59</td>   <td>148802</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;ContactsPageTest.tearDown()[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@78bc645d]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td>  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="767dd7">  <td>17/12/24 12:17:46</td>   <td>76121</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.validateCreateNewContact(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@78bc645d]">validateCreateNewContact</td> 
+  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="767dd7">  <td>17/12/24 12:18:21</td>   <td>111210</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.validateCreateNewContact(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@78bc645d]">validateCreateNewContact</td> 
+  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="767dd7">  <td>17/12/24 12:18:50</td>   <td>140235</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="ContactsPageTest.validateCreateNewContact(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.crm.qa.testcases.ContactsPageTest@78bc645d]">validateCreateNewContact</td> 
+  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="ba90a1">  <td>17/12/24 12:16:52</td>   <td>22311</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLoginPageTitleTest()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@316120fe]">verifyLoginPageTitleTest</td> 
+  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="ba90a1">  <td>17/12/24 12:17:04</td>   <td>34136</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.verifyLogoTest()[pri:0, instance:com.crm.qa.testcases.LoginPageTest@316120fe]">verifyLogoTest</td> 
+  <td>main@1704475655</td>   <td></td> </tr>
+<tr bgcolor="ac9684">  <td>17/12/24 12:17:17</td>   <td>47358</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyNameTest()[pri:1, instance:com.crm.qa.testcases.HomePageTest@5fbd1d05]">verifyNameTest</td> 
+  <td>main@1704475655</td>   <td></td> </tr>
 </table>
